updated overview.html for testFlows function

--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -87,6 +87,35 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Albacore Test Flows</h2>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="card card-chart">
+                                    <div class="card-header card-header-info">
+                                        <h2 style="text-align: center;">Currently 8 Available Flows</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                Hello
+                                            </div>
+                                            <div class="col-md-6">
+                                                World
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
