--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -61,7 +61,7 @@
 <script src="{% static '/js/popper.min.js' %}"></script>
 <script src="{% static '/js/bootstrap-material-design.min.js' %}"></script>
 <script src="https://unpkg.com/default-passive-events"></script>
-<!-- <script src="{% static '/js/perfect-scrollbar.jquery.min.js' %}"></script> -->
+<script src="{% static '/js/perfect-scrollbar.jquery.min.js' %}"></script>
 <script src="{% static '/js/bootstrap-notify.js' %}"></script>
 <script src="{% static '/js/material-dashboard.js' %}"></script>
 <script src="{% static '/js/generator-handler.js' %}"></script>
