--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -100,50 +100,88 @@
                                     </div>
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-md-6" style="border-right: 0.5px solid white">
+                                            <div class="col-md-6" style="border-right: 0.5px solid rgb(253, 151, 34)">
                                                 <h4>Request a New Workflow</h4>
                                                 <select name="requestFlow" id="requestFlow" style="width: 150px;">
-                                                    <option value="flow"> Flows</option>
+                                                    <option value="flow">Flows</option>
                                                 </select>
                                             </div>
                                             <div class="col-md-6">
-                                                <table class="table table-hover">
-                                                    <thead style="text-align: center;">
-                                                        <tr>
-                                                            <th class="text-warning">Workflow Specialist</th>
-                                                            <th class="text-warning">Number of Assigned Flows</th>
-                                                        </tr>
-                                                    </thead>
-                                                    <tbody style="text-align: center;">
-                                                        <tr>
-                                                            <td>mttrejos</td>
-                                                            <td>2</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>coreah</td>
-                                                            <td>3</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>nikhilan</td>
-                                                            <td>1</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>ovaresjo</td>
-                                                            <td>2</td>
-                                                        </tr>
-                                                        <tr>
-                                                            <td>pratuhin</td>
-                                                            <td>4</td>
-                                                        </tr>
-                                                    </tbody>
-                                                </table>
+                                                <h4 style="text-align: center;">Available Backup Flows</h4>
+                                                <h2 style="text-align: center;">4</h2>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-6">
-
+                                <div class="card card-chart">
+                                    <div class="card-header card-header-info">
+                                        <h2 style="text-align: center;">Assigned Flows and Tasks</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="row">
+                                            <div class="col-md-12">
+                                                <div id="card-749841">
+                                                    <div class="card">
+                                                        <div class="card-header">
+                                                             <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-749841" href="#card-element-901460">mttrejos</a>
+                                                        </div>
+                                                        <div id="card-element-901460" class="collapse">
+                                                            <div class="card-body">
+                                                                <table class="table table-hover">
+                                                                    <thead style="text-align: center;">
+                                                                        <tr>
+                                                                            <th>Workflow ID</th>
+                                                                            <th>Task IDS</th>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody style="text-align: center;">
+                                                                        <tr>
+                                                                            <td>bri_gwf_us_vc</td>
+                                                                            <td>2000001111111</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td>bri_gwf_us_nc</td>
+                                                                            <td>2000000222222</td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="card">
+                                                        <div class="card-header">
+                                                             <a class="collapsed card-link" data-toggle="collapse" data-parent="#card-749841" href="#card-element-697935">pratuhin</a>
+                                                        </div>
+                                                        <div id="card-element-697935" class="collapse">
+                                                            <div class="card-body">
+                                                                <table class="table table-hover">
+                                                                    <thead style="text-align: center;">
+                                                                        <tr>
+                                                                            <th>Workflow ID</th>
+                                                                            <th>Task IDS</th>
+                                                                        </tr>
+                                                                    </thead>
+                                                                    <tbody style="text-align: center;">
+                                                                        <tr>
+                                                                            <td>bri_gwf_us_vc</td>
+                                                                            <td>2000001111111</td>
+                                                                        </tr>
+                                                                        <tr>
+                                                                            <td>bri_gwf_us_nc</td>
+                                                                            <td>2000000222222</td>
+                                                                        </tr>
+                                                                    </tbody>
+                                                                </table>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>                            
                         </div>
                     </div>
