--- a/gwf_hub/templates/navbar.html
+++ b/gwf_hub/templates/navbar.html
@@ -18,20 +18,18 @@
         </form> -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
-              <i class="material-icons">dashboard</i>
-              <p class="d-lg-none d-md-block">
-                Stats
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="javascript:void(0)">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="account_dd" data-toggle="dropdown">
               <i class="material-icons">person</i>
-              <p class="d-lg-none d-md-block">
-                Account
-              </p>
+              <p class="d-lg-none d-md-block">Account</p>
             </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="account_dd" style="background-color:#3C4858;">
+              {% if user.is_authenticated %}
+              <a class="dropdown-item" href="{% url 'logout' %}" style="color: white;">Logout</a>
+              {% else %}
+              <a class="dropdown-item" href="#" style="color: white;">Login</a>
+              {% endif %}
+              <a class="dropdown-item" href="#" style="color: white;">Profile</a>
+            </div>
           </li>
         </ul>
       </div>
