--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Parser</h4>
-                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="card-category">This function will help you acquire a formatted Source File from an Albacore JSON code flow.</p>
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
@@ -75,7 +75,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Albacorizer</h4>
-                            <p class="card-category">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <p class="card-category">This function will take a Source File and convert the data into JSON codes ready to be used in Albacore.</p>
                         </div>
                         <div class="card-footer">
                             <div class="nav-tabs-wrapper">
