--- a/gwf_hub/templates/login.html
+++ b/gwf_hub/templates/login.html
@@ -28,6 +28,7 @@
                                     <input type="password" name="password">
                                 </div>
                                 <button type="submit" class="btn btn-sm btn-info" name="login" value="login">Login</button>
+                                <a href="{% url 'register' %}" class="btn btn-sm btn-info">Register</a>
                             </form>
                         </div>                     
                     </div>
