latest updates to accounts branch. Deleted GWF table on DB.

--- a/gwf_hub/templates/navbar.html
+++ b/gwf_hub/templates/navbar.html
@@ -31,7 +31,7 @@
               {% else %}
               <a class="dropdown-item" href="#" style="color: white;">Login</a>
               {% endif %}
-              <a class="dropdown-item" href="#" style="color: white;">Profile</a>
+              <a class="dropdown-item" href="{% url 'account' %}" style="color: white;">Profile</a>
             </div>
           </li>
         </ul>
