--- a/gwf_hub/templates/register.html
+++ b/gwf_hub/templates/register.html
@@ -6,15 +6,15 @@
         <h3 style="text-align: center;">Welcome to the <strong>GWF App</strong> user registration screen</h3> 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="card card-chart">
                         <div class="card-header card-header-success">
                             <h2 style="text-align: center;">Specialist Registration</h2>
                         </div>
-                        <div class="card-body" style="text-align: center;">
+                        <div class="card-body">
                             <form method="POST">
                                 {% csrf_token %}
                                 {{form.as_p}}                            
@@ -27,7 +27,7 @@
                     </div>
 
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
 
                 </div>
             </div>
