--- a/gwf_hub/templates/account.html
+++ b/gwf_hub/templates/account.html
@@ -16,12 +16,13 @@
                         <div class="card-body">
                           <h6 class="card-category">Workflow Specialist</h6>
                           <h4 class="card-title">{{user.first_name}} {{user.last_name}}</h4>
-                          <p class="card-description">
+                          <!-- <p class="card-description">
                             This is a test for usage
-                          </p>
-                          <a href="#" class="btn btn-primary btn-round">Password Change</a>
-                          <a href="#" class="btn btn-primary btn-round">Add title</a>
-                        </div>
+                          </p> -->
+                          <a href="{% url 'password-change' %}" class="btn btn-primary btn-round">Password Change</a>
+                          <a href="#" class="btn btn-info btn-round">Phone tool</a>
+                          <a href="#" class="btn btn-success btn-round">Submit Feedback</a>
+                         </div>
                       </div>
                 </div>
                 <div class="col-md-6">
