updated UI in albacorizer & parser. Added icons to overview page

--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -28,7 +28,7 @@
         <div class="logo"><a href="{% url 'overview' %}" class="simple-text logo-normal">GWF Workspace</a></div>
         <div class="sidebar-wrapper">
             <ul class="nav">
-                {% if overview %}               
+                {% if main %}               
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'overview' %}">
                         <i class="material-icons">home</i>
