--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 {% block content %}
 <div class="main-panel">
     {% include 'navbar.html' %}
@@ -9,8 +10,9 @@
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-success">
-                            <div class="ct-chart" id="dailySalesChart">
-                                <h1 style="text-align: center;">IMG</h1>
+                            <div class="ct-chart" id="auto_answer" style="text-align: center;">
+                                <!-- <h1 style="text-align: center;">IMG</h1> -->
+                                <img src="{% static '/imgs/aa.png' %}" alt="Auto Answers Template Generator">
                             </div>
                         </div>
                         <div class="card-body">
@@ -29,8 +31,8 @@
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-primary">
-                            <div class="ct-chart" id="dailySalesChart">
-                                <h1 style="text-align: center;">IMG</h1>
+                            <div class="ct-chart" id="validator" style="text-align: center;">
+                                <img src="{% static '/imgs/validator.png' %}" alt="Validator">
                             </div>
                         </div>
                         <div class="card-body">
@@ -49,8 +51,8 @@
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-warning">
-                            <div class="ct-chart" id="dailySalesChart">
-                                <h1 style="text-align: center;">IMG</h1>
+                            <div class="ct-chart" id="parser" style="text-align: center;">
+                                <img src="{% static '/imgs/parser2.png' %}" alt="Validator">
                             </div>
                         </div>
                         <div class="card-body">
@@ -69,8 +71,9 @@
                 <div class="col-xl-3 col-lg-12">
                     <div class="card card-chart">
                         <div class="card-header card-header-danger">
-                            <div class="ct-chart" id="dailySalesChart">
-                                <h1 style="text-align: center;">IMG</h1>
+                            <div class="ct-chart" id="albacorizer" style="text-align: center;">
+                                <!-- <h1 style="text-align: center;">IMG</h1> -->
+                                <img src="{% static '/imgs/albacorizer2.png' %}" alt="">
                             </div>
                         </div>
                         <div class="card-body">
