--- a/gwf_hub/static/css/material-dashboard.css
+++ b/gwf_hub/static/css/material-dashboard.css
@@ -16623,7 +16623,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
 .fixed-plugin .dropdown-menu>.active>a.img-holder,
 .fixed-plugin .dropdown-menu>.active>a.img-holder {
   border-color: #00bbff;
-  background-color: #FFFFFF;
+  background-color: #000000;
 }
 
 .fixed-plugin .dropdown-menu>li>a img {
