minor changes to main.css. Added Test Flow Widgets to the overview page

--- a/gwf_hub/static/css/main.css
+++ b/gwf_hub/static/css/main.css
@@ -10,6 +10,10 @@
   color: rgba(255, 153, 0, 0.5);
 }
 
+.amazon-main {
+  color: rgb(255, 153,0)
+}
+
 .switch {
     position: relative;
     display: inline-block;
