--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -100,14 +100,15 @@
                                 <div class="card card-stats">
                                     <div class="card-header card-header-info card-header-icon">
                                         <div class="card-icon">
-                                            <img src="{% static '/imgs/testFlows_small.png' %}" alt="Test Flows">
-                                            <h2 style="text-align: center;">Currently 8 Available Flows</h2>
+                                            <img src="{% static '/imgs/testFlows_small.png' %}" alt="Test Flows">       
                                         </div>
-                                        
+                                        <p class="card-category" style="color: rgb(255, 153, 0);">Workflow Resquest Widget</p>
+                                            <h3 class="card-title">2 Flows currently locked to you</h3> 
                                     </div>
+                                    <hr>
                                     <div class="card-body">
                                         <div class="row">
-                                            <div class="col-md-6" style="border-right: 0.5px solid rgb(253, 151, 34)">
+                                            <div class="col-md-6" style="border-right: 0.5px solid rgb(253, 151, 34); text-align:center">
                                                 <h4>Request a New Workflow</h4>
                                                 <select name="requestFlow" id="requestFlow" style="width: 150px;">
                                                     <option value="flow">Flows</option>
