updates to app name and UI

--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
     <script src="https://kit.fontawesome.com/876a366f24.js" crossorigin="anonymous"></script>
-    <title>GWF Neo</title>
+    <title>Kernel</title>
 </head>
 <body class="dark-edition">
 <div class="wrapper">
