--- a/gwf_hub/templates/login.html
+++ b/gwf_hub/templates/login.html
@@ -4,7 +4,7 @@
 <div class="main-panel">
     {% include 'navbar.html' %}
     <div class="content">
-        <h3 style="text-align: center;">Welcome to <strong style="color: green;">Neo's</strong> login screen</h3>
+        <h3 style="text-align: center;">Welcome to <strong style="color: green;">Kernel's</strong> login screen</h3>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">                    
