--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -107,6 +107,7 @@
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"></script>
 <script src="{% static '/js/jquery.min.js' %}"></script>
+<script src="{% static '/js/parser.js' %}"></script>
 <script src="{% static '/js/popper.min.js' %}"></script>
 <script src="{% static '/js/bootstrap-material-design.min.js' %}"></script>
 <script src="https://unpkg.com/default-passive-events"></script>
