added changes and updates to payload builder

--- a/gwf_hub/templates/overview.html
+++ b/gwf_hub/templates/overview.html
@@ -4,7 +4,7 @@
 <div class="main-panel">
     {% include 'navbar.html' %}
     <div class="content">
-        <h2 class='amazon-main-opaque'>GWF NEO Dashboard</h2>
+        <h2 class='amazon-main-opaque'>GWF Kernel Dashboard</h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xl-3 col-lg-12">
