--- a/gwf_hub/templates/base.html
+++ b/gwf_hub/templates/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static '/css/material-dashboard.css' %}"/>
     <link rel="stylesheet" href="{% static '/css/main.css' %}">
+    <link rel="shortcut icon" type="image/x-icon" href="{% static '/imgs/tab_logo.ico' %}" />
     <script src="https://unpkg.com/htmx.org@1.6.1"></script>
     <script src="https://kit.fontawesome.com/876a366f24.js" crossorigin="anonymous"></script>
     <title>GWF Neo</title>
